--- a/project-0/index.html
+++ b/project-0/index.html
@@ -16,7 +16,7 @@
             </header>
             <section class="hero">
                 <div class="content">
-                    <img class="my-picture" src="images/imagep.png" alt="This is a picture of me">
+                    <img class="my-picture" src="images/imagezero.png" alt="This is a picture of me">
                     <p class="iama">My name is...</p>
                     <p class="my-name my-info">Rachel Gura</p>
                     <p class="iama">I want to be...</p>
