--- a/project-1/portfolio-project.html
+++ b/project-1/portfolio-project.html
@@ -5,6 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 
         <div class="row">
             <div class="col-md-6">
-                <img src="http://lorempixel.com/100/100" />
+                <img src="http://lorempixel.com/100/100" class="img-responsive" alt="responsive image" />
             </div>
             <div class="col-md-6 text-right text-uppercase">
                 <h1>Jane Doette</h1>
@@ -37,14 +38,14 @@
 
         <div class="row">
             <div class="col-md-4 text-uppercase">
-                <img class="img-responsive" src="http://lorempixel.com/200/200" />
+                <img src="http://lorempixel.com/200/200" class="img-responsive" alt="responsive image" />
                 <h3>Appify</h3>
                 <p><a href="http://github.com/">Link to project</a>
                 </p>
             </div>
 
             <div class="col-md-4 text-uppercase">
-                <img class="image-responsive" src="http://lorempixel.com/200/200" />
+                <img src="http://lorempixel.com/200/200" class="img-responsive" alt="responsive image" />
                 <h3>Sunflower</h3>
                 <p><a href="http://github.com/">Link to project</a>
                 </p>
@@ -52,7 +53,7 @@
 
 
             <div class="col-md-4 text-uppercase">
-                <img src="http://lorempixel.com/200/200" />
+                <img src="http://lorempixel.com/200/200" class="img-responsive" alt="responsive image" />
                 <h3>Bokeh</h3>
                 <p><a href="http://github.com/">Link to project</a>
                 </p>
