--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -1,104 +1,63 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Top Ten Places to Visit in Dallas. Created for Udacity's Front End Nanodegree">
+        <meta name="author" content="Joy Thomas">
+        <link rel="icon" href="images/favicon.ico">
+        <title>Top Ten Places to Visit in Dallas</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    </head>
 
-<html>
+    <body>
+        <div class="container">
+            <div class="mobile-container">
+                <nav class="navbar navbar-inverse navbar-fixed-top">
+                    <div class="navigation">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html">Top10 Dallas</a>
+                        </div>
+                        <div id="navbar" class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <header>
+                    <div class="introduction">
+                        <h3 class="lead">Discover my favorite places in Dallas!</h3>
+                    </div>
+                    <div id="searchArea">
+                        <input data-bind="textInput: filter" placeholder="Search"/>
+                    </div>
+                </header>
+                <aside>
+                    <ul data-bind="foreach: filteredItems" id="places-list">
+                        <li data-bind="text: name, click: $parent.openLocationWindow" class="place-info">
+                        </li>
+                    </ul>   
+                </aside>
+            </div>
+            <div id="map"></div>
+        </div>
 
-<head>
-
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>Neighborhood Map</title>
-
-<!-- Use Bootstrap to improve UI !-->
-    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
-
-<!-- Inlining the CSS will make the page load faster !-->
-	<style>
-	body, html {
-	height: 100%;
-	margin: 0; 
-	padding: 0;
-}
-    #map-canvas { 
-	height: 600px;
-	margin: 0; 
-	padding: 0;
-}
-    </style>
-
-<!-- Loading Google Maps API library !-->
-	<script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCML33qxghXhHMp6WsJcohIZYsi5_hvFQs">
-    </script>
-
-<!-- Loading jQuery library !-->
-    <script src="scripts/lib/jquery-1.11.2.min.js"></script>
-
-</head>
-
-<body>
-
-    <div class="container">
-
-    	<div class="row">
-
-    		<div id="error" role="alert"></div>
-
-    	</div>
-
-    	<div class="page-header">
-
-    		<h1>Neighborhood Map <small>Project</small></h1>
-
-    	</div>
-
-    	<div class="row">
-
-    		<div class="col-md-4" >
-
-    			<div>
-
-    				<form class="navbar-form" role="search">
-
-    					<input type="text" class="form-control" placeholder="Search" data-bind="value: saved_value, valueUpdate: 'afterkeydown'">
-    				</form>
-    			</div>
-
-    			<div>
-
-    				<h4>Key locations</h4>
-
-    				<ul class="list-group" id="list-view" data-bind="foreach: markers">
-
-    					<li class="list-group-item" data-bind="text: name() , visible: $root.match(name(), $root.saved_value(),$index())"></li>
-
-    				</ul>
-
-    			</div>
-
-    		</div>
-
-    		<div id="map-canvas" class="col-md-8"></div>
-    	</div>
-    </div>
-
-<!-- Inline Javascript to add a Google Map!-->
-    <script type="text/javascript">
-	var mapOptions = {
-    center: { lat: 38.717072, lng: -9.135803}, 
-    zoom: 15
-};
-    var map = new google.maps.Map(document.getElementById('map-canvas'),
-    mapOptions);
-</script>
-
-<!-- Load Knockout library and app.js !-->
-	<script src="scripts/lib/knockout-3.3.0.js"></script>
-	<script src="scripts/app.js"></script>
-
-
-
-</body>
-
+        <script src="js/jquery-1.11.3.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/ie10-viewport-bug-workaround.js"></script>
+        <script src="js/knockout-3.3.0.js"></script>
+        <script src="js/app.js"></script>
+    </body>
 </html>
