commit js and images

--- a/neightborhood-map-project/about.html
+++ b/neightborhood-map-project/about.html
@@ -48,27 +48,27 @@
 				<section>
 					<figure>
 						<img src="images/dallasmuseumofart.jpg" alt="Dallas Museum of Art">
-						<figcaption>A close-up of a painting at the Dallas Museum of Art</figcaption>
+						<figcaption>Beautiful sculpture outside the Museum of Art</figcaption>
 					</figure>
 					<figure>
 						<img src="images/fairpark.jpg" alt="Fair Park">
-						<figcaption>Texas Star Ferris Wheel in Fair Park</figcaption>
+						<figcaption>Amphitheatre at Fair Park</figcaption>
 					</figure>
 					<figure>
 						<img src="images/fountainplace.jpg" alt="Fountain Place, Dallas">
-						<figcaption>The fountains and trees that surround the Fountain Place skyscraper</figcaption>
+						<figcaption>Awesome architecture at the ground floor of Fountain Place</figcaption>
 					</figure>
 					<figure>
 						<img src="images/klydewarrenpark.jpg" alt="Klyde Warren Park">
-						<figcaption>A lovely park above a highway in downtown Dallas</figcaption>
+						<figcaption>Right across from the Museum of Art</figcaption>
 					</figure>
 					<figure>
 						<img src="images/thanksgivingchapel.jpg" alt="Thanksgiving Chapel">
-						<figcaption>Beautiful stained-glass in the Thanksgiving Square Chapel</figcaption>
+						<figcaption>Iconic stained-glass in the Thanksgiving Square Chapel</figcaption>
 					</figure>
 					<figure>
 						<img src="images/perotsciencemuseum.jpg" alt="Perot Science Museum">
-						<figcaption>An interactive science museum in downtown Dallas</figcaption>
+						<figcaption>Exciting design and one of the best museums in Dallas</figcaption>
 					</figure>
 				</section>
 			</div>
