--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Top Ten Places to Visit in Dallas. Created for Udacity's Front End Nanodegree">
         <meta name="author" content="Joy Thomas">
-        <link rel="icon" href="images/favicon.ico">
+        
         <title>Top Ten Places to Visit in Dallas</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
@@ -38,7 +38,7 @@
                 </nav>
                 <header>
                     <div class="introduction">
-                        <h3 class="lead">Discover my favorite places in Dallas!</h3>
+                        <h3 class="lead">Welcome to my favorite places in Downtown Dallas</h3>
                     </div>
                     <div id="searchArea">
                         <input data-bind="textInput: filter" placeholder="Search"/>
