clean up of app, images resized

--- a/neightborhood-map-project/contact.html
+++ b/neightborhood-map-project/contact.html
@@ -6,8 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Favorite places in Dallas. Created for Udacity's Front End Nanodegree">
     	<meta name="author" content="Rachel Gura">
-    	<link rel="icon" href="images/favicon.ico">
-		<title>Top Ten Places to Visit in Dallas - About Page</title>
+    	
+
+		<title>Places to Visit in Dallas - About Page</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
@@ -24,7 +25,7 @@
 			           			<span class="icon-bar"></span>
 			            		<span class="icon-bar"></span>
 			            	</button>
-		            		<a class="navbar-brand" href="index.html">Top10 Dallas</a>
+		            		<a class="navbar-brand" href="index.html">Dallas</a>
 		           		</div>
 		            	<div id="navbar" class="collapse navbar-collapse">
 		            		<ul class="nav navbar-nav">
