--- a/neightborhood-map-project/about.html
+++ b/neightborhood-map-project/about.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Top Ten Places to visit in Dallas. Created for Udacity's Front End Nanodegree">
-    	<meta name="author" content="Joy Thomas">
-    	<link rel="icon" href="images/favicon.ico">
+    	<meta name="author" content="Rachel Gura">
+    
 		<title>Favorite Places in Dallas - About Page</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
