--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Top Ten Places to Visit in Dallas. Created for Udacity's Front End Nanodegree">
-        <meta name="author" content="Joy Thomas">
+        <meta name="author" content="Rachel Gura">
         
         <title>Top Ten Places to Visit in Dallas</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html">Top10 Dallas</a>
+                            <a class="navbar-brand" href="index.html">Dallas</a>
                         </div>
                         <div id="navbar" class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
