--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <script src="js/jquery-1.11.3.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+       <!-- <script src="js/bootstrap.min.js"></script>-->
         <script src="js/ie10-viewport-bug-workaround.js"></script>
         <script src="js/knockout-3.3.0.js"></script>
         <script src="js/app.js"></script>
