--- a/neightborhood-map-project/contact.html
+++ b/neightborhood-map-project/contact.html
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 		<script src="js/jquery-1.11.3.min.js"></script>
-		<!--<script src="js/bootstrap.min.js"></script>-->
+		<<script src="js/bootstrap.min.js"></script>
 		<script src="js/ie10-viewport-bug-workaround.js"></script>
 	</body>
 </html>
