clean up, remove typos

--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -41,7 +41,7 @@
                         <h3 class="lead">Welcome to my favorite places in Downtown Dallas</h3>
                     </div>
                     <div id="searchArea">
-                        <input data-bind="textInput: filter" placeholder="Search"/>
+                        <input data-bind="textInput: filter" placeholder="Search">
                     </div>
                 </header>
                 <aside>
