--- a/neightborhood-map-project/contact.html
+++ b/neightborhood-map-project/contact.html
@@ -32,6 +32,7 @@
 		            			<li><a href="index.html">Home</a></li>
 				           		<li><a href="about.html">About</a></li>
 				            	<li class="active"><a href="contact.html">Contact</a></li>
+				            	<a href="mailto:sparrowdetour@gmail.com">sparrowdetour@gmail.com</a>
 				       		</ul>
 				   		</div>
 				   	</div>
