changed email text to link

--- a/neightborhood-map-project/contact.html
+++ b/neightborhood-map-project/contact.html
@@ -43,7 +43,7 @@
 					</div>
 					<div> 
 					 	<h4>Rachel Gura</h4>
-					 	<p>Email: sparrowdetour@gmail.com</p>
+					 	<a href="mailto:sparrowdetour@gmail.com">sparrowdetour@gmail.com</a>
 				  	</div>
 				</header>
 			</div>
