update to api handling url line 108

--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -40,7 +40,7 @@
                     <div class="introduction">
                         <h3 class="lead">Welcome to my favorite places in Downtown Dallas</h3>
                     </div>
-                    <div id="searchArea">
+                    <div id="search-area">
                         <input data-bind="textInput: filter" placeholder="Search">
                     </div>
                 </header>
