added function line 12 for callback

--- a/neightborhood-map-project/index.html
+++ b/neightborhood-map-project/index.html
@@ -10,7 +10,8 @@
         <title>Top Ten Places to Visit in Dallas</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+        <script>function googleSuccess() {}</script>
+        <script async src="http://maps.googleapis.com/maps/api/js?libraries=places&callback=googleSuccess"></script>
     </head>
 
     <body>
