contact us form

--- a/button project/index.html
+++ b/button project/index.html
@@ -5,8 +5,8 @@
 		<link rel='stylesheet' type='text/css' href='stylesheet.css'/>
 	</head>
 	<body>
-		<div id="orange"><br/>Submit!</div>
-		<div id="green">✓</div>
+		<div id="orange"><br/>Orange!</div>
+		<div id="green">O</div>
 		<div id="red">X</div>
 	</body>
 </html>
