--- a/eshas-resturant/index.html
+++ b/eshas-resturant/index.html
@@ -8,15 +8,15 @@
 
 <body>
 <h1>esha's restaurant</h1>
-	<div>
+	<div class="first">
 		<h2>welsh onion soko $14</h2>
 		<p>Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </p>
 	</div>
-	<div>
+	<div class="second">
 		<h2>pastrami boudin tongue $22</h2>
 		<p>Tri-tip capicola kielbasa salami brisket chicken rump strip steak drumstick. Meatloaf chuck boudin ribeye pork jowl. Andouille bacon jowl meatloaf pork loin prosciutto bresaola.</p>
 	</div>
-	<div>
+	<div class="dessert">
 		<h2>fruitcake marzipan pudding dragee $8</h2>
 		<p>Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice cream candy canes.</p>
 	</div>
