--- a/eshas-resturant/index.html
+++ b/eshas-resturant/index.html
@@ -16,6 +16,6 @@
 	</div>
 	<div class="dessert">
 		
-		<p>fruitcake marzipan pudding dragee $8 Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice cream candy canes.</p>
+		<p>fruitcake marzipan pudding dragee $8 Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice creames candy canes.</p>
 	</div>
 </body>
