--- a/eshas-resturant/index.html
+++ b/eshas-resturant/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<h1>esha's restaurant</h1>
+<h1>Esha's Restaurant</h1>
 	<div class="first">
 			<p>welsh onion soko $14 Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </p>
 	</div>
