added float and price class

--- a/eshas-resturant/index.html
+++ b/eshas-resturant/index.html
@@ -8,14 +8,14 @@
 <body>
 <h1>Esha's Restaurant</h1>
 	<div class="first">
-			<p>welsh onion soko $14 Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </p>
+			<p>welsh onion soko<span class="price"> $14</span><br />  Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </p>
 	</div>
 	<div class="second">
 		
-		<p>pastrami boudin tongue $22 Tri-tip capicola kielbasa salami brisket chicken rump strip steak drumstick. Meatloaf chuck boudin ribeye pork jowl. Andouille bacon caps meatloaf pork loin prosciutto bresaola.</p>
+		<p>pastrami boudin tongue<span class="price"> $22</span><br /> Tri-tip capicola kielbasa salami brisket chicken rump strip steak drumstick. Meatloaf chuck boudin ribeye pork jowl. Andouille bacon caps meatloaf pork loin prosciutto bresaola.</p>
 	</div>
 	<div class="dessert">
 		
-		<p>fruitcake marzipan pudding dragee $8 Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice creames candy canes.</p>
+		<p>fruitcake marzipan pudding dragee<span class="price"> $8</span><br /> Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice creames candy canes.</p>
 	</div>
 </body>
