background colors to banners

--- a/eshas-resturant/index.html
+++ b/eshas-resturant/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Esha's Restaurant</h1>
+<h2>A New York City Eatery</h2>
 	<div class="first">
 			<p>welsh onion soko<span class="price"> $14</span><br />  Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </p>
 	</div>
