image and text update for far out

--- a/far-out-delivery/about.html
+++ b/far-out-delivery/about.html
@@ -33,7 +33,8 @@
 <body>
 
     <div class="brand">Far Out Delivery</div>
-    <div class="address-bar">3481 Melrose Place | Paris, TZ 90210 | (903)272-5523</div>
+    <div class="address-bar">| Paris, TX 90210 | 903-272-5523</div>
+    <div class="hours"> Monday-Friday 6:00am-9:00pm</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
