--- a/far-out-delivery/contact.html
+++ b/far-out-delivery/contact.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Far Out Delivery</div>
-    <div class="address-bar">3481 Melrose Place | Paris, TX 90210 | (903) 272-5523</div>
+    <div class="address-bar">| Paris, TX 90210 | (903) 272-5523</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -94,7 +94,7 @@
                         <strong><a href="mailto:name@example.com">reganhamaker@yahoo.com</a></strong>
                     </p>
                     <p>Address:
-                        <strong>3481 Melrose Place
+                        <strong>10000 FM 410 North
                             <br>Detroit, TX 90210</strong>
                     </p>
                 </div>
@@ -110,7 +110,7 @@
                         <strong>US</strong>
                     </h2>
                     <hr>
-                    <p>Questions about how to get started? Shoot us a messager using this form.</p>
+                    <p>Questions about how to get started? Shoot us a message using this form.</p>
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
