--- a/far-out-delivery/index.html
+++ b/far-out-delivery/index.html
@@ -19,6 +19,7 @@
 
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    
     <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -33,7 +34,8 @@
 <body>
 
     <div class="brand">Far Out Delivery</div>
-    <div class="address-bar">3481 Melrose Place | Paris, TX 90210 | (903)272-5523</div>
+    <div class="address-bar">| Paris, TX 90210 | 903-272-5523|</div>
+    <div class="hours"> Monday-Friday 6:00am-9:00pm</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,7 +49,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Far Out Delivery</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
