--- a/far-out-delivery/contact.html
+++ b/far-out-delivery/contact.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Far Out Delivery</div>
-    <div class="address-bar">| Paris, TX 90210 | (903) 272-5523</div>
+    <div class="address-bar">Paris, TX 75460 | 903-272-5523</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
