--- a/far-out-delivery/index.html
+++ b/far-out-delivery/index.html
@@ -34,7 +34,7 @@
 <body>
 
     <div class="brand">Far Out Delivery</div>
-    <div class="address-bar">| Paris, TX 90210 | 903-272-5523|</div>
+    <div class="address-bar">Paris, TX 75460 | 903-272-5523</div>
     <div class="hours"> Monday-Friday 6:00am-9:00pm</div>
 
     <!-- Navigation -->
@@ -125,7 +125,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Locally Owned and Opporated Serving the North East Texas Area</strong>
+                    <h2 class="intro-text text-center">Locally wned and operated serving the north east Texas area</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
