adjust address bar

--- a/far-out-delivery/index.html
+++ b/far-out-delivery/index.html
@@ -35,7 +35,7 @@
 
     <div class="brand">Far Out Delivery</div>
     <div class="address-bar">Paris, TX 75460 | 903-272-5523</div>
-    <div class="hours"> Monday-Friday 6:00am-9:00pm</div>
+    <div class="address-bar"> Monday-Friday 6:00am-9:00pm</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
