margins and address bar

--- a/far-out-delivery/index.html
+++ b/far-out-delivery/index.html
@@ -125,7 +125,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Locally wned and operated serving the north east Texas area</strong>
+                    <h2 class="intro-text text-center">Locally owned and operated serving the north east Texas area</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
